[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["easy_su_cloud_sdk"]  # 指向根目录下的包
include = ["easy_su_cloud_sdk/*"]  # 包含所有子目录下的文件



[project]
name = "easy_su_cloud_sdk"
version = "2025.08.11"
authors = [
  { name = "Justwannasleep", email = "linhao3389@outlook.com" }
]
description = "易速云SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.optional-dependencies]
test = ["pytest>=8.4.1"]

[project.urls]
Homepage = "https://github.com/Justwannasleep/easy_su_cloud_sdk"
Repository = "https://github.com/Justwannasleep/easy_su_cloud_sdk"